src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__eof_after_variable.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        var a\n        \")"
---
stderr:
Error: 
   ╭─[<unknown>:2:12]
   │
 2 │         var a
   │         ─┬─  
   │          ╰─── This statement should be terminated with ;
 3 │ 
   │        ┬  
   │        ╰── Expected ;
───╯


